maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:46: error: not found: value Value
val TOP, BOTTOM, RIGHT, LEFT = Value
                               ^ShortestPathMaze:46: error: not found: value Value
val TOP, BOTTOM, RIGHT, LEFT = Value
                               ^ShortestPathMaze:46: error: not found: value Value
val TOP, BOTTOM, RIGHT, LEFT = Value
                               ^ShortestPathMaze:46: error: not found: value Value
val TOP, BOTTOM, RIGHT, LEFT = Value
                               ^ShortestPathMaze:45: error: not found: type Value
type NeighborPos = Value
                   ^ShortestPathMaze:58: error: not found: value hasBottomWall
      if (hasBottomWall(x, y)) return min;
          ^ShortestPathMaze:62: error: not found: value hasRightWall
      if (hasRightWall(x, y)) return min;
          ^